--- a/src/SqlUtil.Tests/SqlUtil.Tests.csproj
+++ b/src/SqlUtil.Tests/SqlUtil.Tests.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SqlUtil\SqlUtil.csproj" />
+  </ItemGroup>
+
 </Project>
