--- a/src/SqlUtil.Tests/SqlUtil.Tests.csproj
+++ b/src/SqlUtil.Tests/SqlUtil.Tests.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\SqlUtil\SqlUtil.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="../../.settings.json" CopyToOutputDirectory="Always" />
+  </ItemGroup>
+
 </Project>
